--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll-to-bottom": "^4.0.0",
+    "react-youtube": "^10.1.0",
     "socket.io-client": "^2.3.1",
     "web-vitals": "^0.2.4"
   },
