--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "cookie-parser": "^1.4.5",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.16",
+    "kill-port": "^1.6.1",
+    "mongoose": "^6.1.3",
+    "nodemon": "^2.0.15",
     "socket.io": "^2.3.0",
-    "validator": "^13.5.2"
+    "validator": "^13.7.0",
+    "ytdl-core": "^4.9.2"
   }
 }
