--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "netlify-cli": "^8.4.2",
+    "pdfjs-dist": "^2.8.335",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
     "react-scroll-to-bottom": "^4.2.0",
