--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "materialize-css": "^1.0.0",
     "netlify-cli": "^8.4.2",
     "pdfjs-dist": "^2.8.335",
     "react": "^17.0.2",
